[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/MainFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://BackgroundResources/MainDarkBackground.tres" type="StyleBox" id=2]
[ext_resource path="res://Fonts/LightFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/VisualPanel/QuestInfoPanel.gd" type="Script" id=4]

[node name="QuestInfoPanel" type="PanelContainer"]
margin_right = 332.0
margin_bottom = 121.0
rect_min_size = Vector2( 0, 150 )
custom_styles/panel = ExtResource( 2 )
script = ExtResource( 4 )

[node name="Margin" type="MarginContainer" parent="."]
margin_right = 332.0
margin_bottom = 151.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="Margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 322.0
margin_bottom = 141.0
custom_constants/separation = 10

[node name="NameLabel" type="Label" parent="Margin/VBox"]
margin_right = 312.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 1 )
text = "Quest Name"

[node name="QuestTextLabel" type="Label" parent="Margin/VBox"]
margin_top = 37.0
margin_right = 312.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 3 )
text = "Quest Text Description"
autowrap = true

[node name="DescLabel" type="Label" parent="Margin/VBox"]
margin_top = 74.0
margin_right = 312.0
margin_bottom = 131.0
custom_fonts/font = ExtResource( 1 )
text = "Quest Property Description"
autowrap = true
